<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="intro_first">Welcome to my Project</string>
    <string name="intro_second">You could use it to buy product!</string>
    <string name="btn_login">User Login</string>
    <string name="btn_user_register">Register for new user</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="registration_message">New User Registration</string>
    <string name="popular_products">Popular Products</string>
    <string name="browse_category">Browse Category</string>
    <string name="cart">Cart</string>
</resources>