<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_marginTop="80sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_first"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="80sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_second"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textAlignment="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnlogin"
            android:layout_marginTop="80sp"
            android:text="@string/btn_login"
            android:textSize="18sp"
            android:id="@+id/btnUserLogin"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnregister"
            android:layout_marginTop="10sp"
            android:text="@string/btn_user_register"
            android:textSize="18sp"
            android:id="@+id/btnUserRegister"
             />
    </LinearLayout>
</LinearLayout>